feat:add live templates

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -15,7 +15,9 @@
 ]]></description>
 
     <depends>com.intellij.modules.platform</depends>
+
     <extensions defaultExtensionNs="com.intellij">
+        <defaultLiveTemplates file="liveTemplates/bloc"/>
     </extensions>
 
     <actions>
